# MINECRAFT

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/minecraft_ursina/core/: game.py  settings.py
src/minecraft_ursina/player/: controller.py  inventory.py
src/minecraft_ursina/ui/: hud.py
src/minecraft_ursina/utils/: logger.py
src/minecraft_ursina/world/: block.py  terrain.py
tests/: test_smoke.py
